Switched images to flickr instead because gdrive static url is not static -_-

--- a/resources/img/.picasaoriginals/.picasa.ini
+++ b/resources/img/.picasaoriginals/.picasa.ini
@@ -5,3 +5,17 @@ moddate=26411c3ba5bfcf01
 width=3948
 height=2652
 textactive=0
+[aero1.jpg]
+filters=crop64=1,29220000d394ffff;
+crop=rect64(29220000d394ffff)
+moddate=bf8225b9bfbfcf01
+width=3504
+height=2336
+textactive=0
+[aero2.jpg]
+filters=crop64=1,31960000dfddffff;
+crop=rect64(31960000dfddffff)
+moddate=adbd9acfbfbfcf01
+width=3872
+height=2639
+textactive=0
